Tests for enums. Bugfixes.